IaC_Code/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-backend
  labels:
    app: cms-backend
spec:
  replicas: 2 # Chạy 2 bản sao để đảm bảo High Availability
  selector:
    matchLabels:
      app: cms-backend
  template:
    metadata:
      labels:
        app: cms-backend
    spec:
      containers:
      - name: cms-backend
        image: nginx:latest # (Lưu ý: Chỗ này dùng tạm image nginx để test, thực tế sẽ thay bằng Docker Image Backend của bạn)
        ports:
        - containerPort: 8000
