IaC_Code/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP # Chỉ mở kết nối nội bộ trong Cụm EKS
  selector:
    app: cms-backend
  ports:
  - port: 8000
    targetPort: 8000
